# workflow-orchestration-service-november18

./: .env.example  AGENTS.md  docker-compose.yml  opencode.json  pyproject.toml  run_opencode_prompt.ps1  run_opencode_prompt.sh  workflow-orchestration-service-november18.code-workspace
.devcontainer/: devcontainer.json
.github/: .labels.json
.github/workflows/: validate.yml
.opencode/: package.json
.opencode/agents/: agent-instructions-expert.md  backend-developer.md  code-reviewer.md  developer.md  devops-engineer.md  documentation-expert.md  frontend-developer.md  odbplusplus-expert.md  orchestrator.md  planner.md  product-manager.md  qa-test-engineer.md  researcher.md
.traycer/cli-agents/: Opencode2w.bat
client/: Dockerfile
docs/: local-orchestration-quickstart.md  new_features.md  pwsh-scripts.md
docs/.archived/: F1-feature-full-dev-plan.md  F1-full-dev-plan_(OPENCODE).md  PR9-issues-plan.md  implementation-plan.md  non-idle-failure-forensics.md  pr-approval-merge-plan.md  prompt-refactor-analysis.md
plan_docs/: workflow-plan.md
scripts/: validate.ps1
server/: Dockerfile  entrypoint.sh
src/: config.py  dispatcher.py  eligibility_checker.py  event_router.py  main.py  prompt_assembler.py  sentinel.py  worktree_manager.py
src/models/: __init__.py  event.py  security.py
test/: test-opencode-run.sh  test-server-image.sh  test_dispatcher.py  test_eligibility_checker.py  test_event_router.py  test_prompt_assembler.py  test_security.py  test_sentinel.py  test_worktree_manager.py
test/fixtures/: assembled-prompt-expected.md  issues-labeled.json
(+3 files in other folders)
